force-app/main/default/objects/course__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Technical</fullName><default>false</default><label>Technical</label></value>
            <value><fullName>Language</fullName><default>false</default><label>Language</label></value>
            <value><fullName>Non-Technical</fullName><default>false</default><label>Non-Technical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>