force-app/main/default/objects/course__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <description>SELECT  DEPARTMENT FROM THE LIST</description>
    <label>department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>BCOM</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>