force-app/main/default/objects/course__c/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <description>course duration</description>
    <label>duration</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>