force-app/main/default/objects/course__c/fields/FEES__c.field-meta.xml
<CustomField>
    <fullName>FEES__c</fullName>
    <description>enter paided fee amount</description>
    <label>FEES</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>