force-app/main/default/objects/course__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>courses</relationshipLabel>
    <relationshipName>courses</relationshipName>
    <type>Lookup</type>
</CustomField>